# sponsor_zoeken

./: .env.example  Dockerfile  README.md  compose.yml  fly.toml  pyproject.toml
alembic/versions/: 71be84d8f851_add_company_name_gin_index.py  c8c50916e128_create_companies_table.py
app/: main.py  models.py  schemas.py
app/api/: main.py
app/api/routes/: companies.py
app/background/scrapers/: nl.py  uk.py
app/contexts/: companies.py
app/core/: config.py
static/: index.html
static/assets/: index-B29JwjS9.js  index-BDRFyT48.js  index-DQR-6mNk.css  index-KkFr-wYJ.js
ui/: index.html  openapi-config.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/app/: store.ts
ui/src/app/store/: api.ts  emptyApi.ts  generatedUrlApi.ts
