[tool.poetry]
name = "sponsor-zoeken"
version = "0.1.0"
description = ""
authors = ["Nathan Johnson <nathanjohnson320@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
schedule = "^1.2.2"
fastapi-pagination = "^0.12.26"
uuid = "^1.30"
alembic = "^1.13.2"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
pydantic-settings = "^2.4.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
